# ml-scanner-project

./: .gitignore  README.md  render.yaml
foodscanner-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_README.md  README.md  package-lock.json  pyproject.toml  requirements-deploy.txt  requirements.txt
foodscanner-ai/api/: main.py
foodscanner-ai/database/: database.py  db_session.py  init_db.py  load_indian_products.py  load_products.py  models.py  orm.py  schema.sql
foodscanner-ai/datasets/: prepare_dataset.py
foodscanner-ai/datasets/indian_foods/: indian_packaged_foods.csv  indian_packaged_foods_old_backup.csv
foodscanner-ai/ml_model/: advanced_training.py  evaluation.py  feature_engineering.py  predict_nutriscore.py  train_model.py
foodscanner-ai/reports/: FINAL_REPORT.md  data_quality.txt  evaluation_results.json  evaluation_summary.txt  training_progress.jsonl
foodscanner-ai/scanner/: barcode_scanner.py
foodscanner-ai/scripts/: build_large_indian_dataset.py  clean_dataset.py  collect_large_dataset.py  live_training_dashboard.py  load_off_india.py  watch_training_dashboard.py
foodscanner-ai/services/: additive_analyzer.py  additive_knowledge_base.py  auth_service.py  barcode_lookup.py  db_service.py  decision_explainer.py  final_decision_engine.py  food_health_score.py  food_logger.py  goal_report.py  health_report.py  indian_food_dataset.py  ingredient_analyzer.py  openfoodfacts_service.py  product_search.py  recommendation_engine.py  score_explainer.py
foodscanner-mobile/: .env.example  App.js  README.md  app.json  eas.json  (+2 more)
(+14 files in other folders)
