[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodscanner-ai"
version = "0.1.0"
description = "Barcode-based food nutrition analysis system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "psycopg2-binary",
  "requests",
  "rapidfuzz",
  "python-dotenv",
  "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "services*", "utils*", "ml_model*", "database*"]
